try to fix button safari

--- a/styles.css
+++ b/styles.css
@@ -1264,7 +1264,7 @@ h1 {
   display: none;
 }
 
-input[type=text], input[type=button] {
+input[type=text], input[type=button], input[type=submit] {
   -webkit-appearance: none;
   -webkit-border-radius: 0;
 }
